--- a/recipes/teriyaki-chicken.html
+++ b/recipes/teriyaki-chicken.html
@@ -6,6 +6,36 @@
   </head>
   <body>
     <h1>Teriyaki Chicken recipe</h1>
-    <img src=""
+    <img src="teriyaki-chicken-15.jpg" alt="Teriyaki chicken"
+    width="50%"
+    height="50%">
+    <h2>Teriyaki chicken is a super easy chicken recipe cooked in 10-minutes with no marinading!<br>
+      Crispy skinless chicken thighs stir-fried and swimming in a beautiful flavoured homemade teriyaki sauce.<br>
+      A hint of garlic adds a twist on a traditional Japanese Teriyaki Chicken recipe and makes it absolutely addictive!<br> 
+      This is better than ANY store-bought teriyaki sauce, guaranteed.
+    </h2>
+    <h3>Ingredients</h3>
+     <ul>
+       <li>1.3 pounds (600 grams) skinless boneless chicken thighs, cut into 1 1/2-inch pieces
+         <li>1 tablespoon cooking oil</li>
+         <li>1/4 cup low-sodium soy sauce</li>
+         <li>3 tablespoons light brown sugar (or white granulated sugar)</li>
+         <li>3 tablespoons cooking Sake ((rice wine vinegar or apple cider vinegar)</li>
+         <li>2 tablespoons Mirin (optional -- white wine or dry sherry can be substituted)</li>
+         <li>1 tablespoon sesame oil, optional (adds a wonderful flavour)</li>
+         <li>2 teaspoons minced garlic (2 cloves garlic)</li>
+         <li>1 shallot/green onion stem, sliced to garnish</li>
+         <li>4 cups broccoli florets, lightly steamed</li>
+         <li>1 teaspoon cornstarch (or corn flour) mixed with 2 teaspoons water</li>
+     </ul>
+    <h3>Steps</h3>
+      <ol>
+        <li>Heat cooking oil in a large pan over medium heat.</li>
+        <li>Stir fry chicken, stirring occasionally until lightly browned and crisp.</li>
+        <li>In a small jug or bowl whisk together the soy sauce, sugar, Sake/vinegar, Mirin and sesame oil to combine. Set aside.</li>
+        <li>Add the garlic to the centre of the pan and saute until lightly fragrant (about 30 seconds). </li>
+        <li>Pour in the sauce and allow to cook, while stirring, until the sauce thickens into a beautiful shiny glaze (about 2-3 minutes).</li>
+        <li>Add in the steamed broccoli. Garnish with green onion (or shallot) slices and serve over steamed rice.</li>
+      </ol>
   </body>
 </html>
