Added pudding recipe link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <title>Main page</title>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/teriyaki-chicken.html">Teriyaki Chi</a>
+        <a href="recipes/teriyaki-chicken.html">Teriyaki Chicken</a>
+        <a href="recipes/purin.html">Japanese Purin Pudding</a>
     </body>
 </html>
